<resources>
    <string name="app_name">Healing-Paws</string>
    <string name="translate">Translate</string>
    <string name="welcome">Welcome to Healing-Paws</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="rules">I accept the site rules</string>
    <string name="pet">Pet</string>
    <string name="location">Location</string>
    <string name="beijing">Beijing</string>
    <string name="shanghai">Shanghai</string>
    <string name="chengdu">Chengdu</string>
    <string name="type">What type of appointment?</string>
    <string name="emergency">Emergency</string>
    <string name="standard">Standard</string>
    <string name="doctor">Which doctor would you like to make an appointment with?</string>
    <string name="change">Do you accept ADJUSTMENT?</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="description">Describe your pet\'s condition</string>
    <string name="submit">Confirm and Submit</string>
    <string name="appointment">Make a New Appointment</string>
    <string name="back">back</string>
    <string name="new_appointment">New Appointment</string>
    <string name="my_appointment">My Appointment</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed_password">Wrong Password</string>
    <string name="login_failed_username">User Does Not Exist</string>
    <string name="unknown_failure">Unknown Failure</string>
    <string name="remember_me">Remember Me</string>
    <string name="logout">Logout</string>
    <string name="register_successful">Register Successful</string>
    <string name="username_empty">Username Cannot Be Empty</string>
    <string name="password_empty">Password Cannot Be Empty</string>
    <string name="register_failed">Register Failed</string>
    <string name="username_invalid">Invalid Username</string>
    <string name="password_invalid">Invalid Password</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="phone_invalid">Invalid Phone</string>
    <string name="deny_rules">You Must Accept the Site Rules</string>
    <string name="username_duplicate">Duplicate Username</string>
    <string name="reserve_successful">Reservation Successful</string>
    <string name="reserve_failed">Reservation Failed</string>
    <string name="pet_empty">You Have No Pets Registered Yet. Please Register At Least One Pet.</string>
    <string name="login_failed_invalid">Invalid Account</string>
    <string name="sql_error">There is something wrong with the database. Please try again.</string>
    <string name="server_error">Server Error</string>
    <string name="question">QUESTION</string>
    <string name="profile">PROFILE</string>
    <string name="time">time</string>
    <string name="loc">location</string>
    <string name="doc">Doctor</string>
    <string name="desc">Description</string>
    <string name="ty">Type</string>
    <string name="ch">Change</string>
    <string name="ps">Pet Status</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="send">Send</string>
    <string name="answer">Answer</string>
    <string name="employee">Employee</string>
    <string name="other">Other</string>
    <string name="anonymity">Anonymity</string>
    <string name="question_type">Question Type</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_success">Send Successful</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="remove_success">Remove Successful</string>
    <string name="pet_name">Pet Name</string>
    <string name="pet_age">Pet Age</string>
    <string name="pet_category">Pet Category</string>
    <string name="doctor_empty">Sorry, there is currently no doctor in selected city.</string>
    <string name="add_pet">Add Pet</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="pet_name_invalid">Invalid Pet Name</string>
    <string name="age_invalid">Invalid Age</string>
    <string name="pet_name_duplicate">Duplicate Pet Name</string>

</resources>
