<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/m_t_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="30sp" />


    <Button
        android:id="@+id/m_b_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_t_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:background="@drawable/buttonshape"
        android:text="@string/login" />

    <Button
        android:id="@+id/m_b_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_b_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-118dp"
        android:background="@drawable/buttonshape"
        android:text="@string/register" />

    <Button
        android:id="@+id/m_b_new_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_b_register"
        android:layout_marginTop="257dp"
        android:background="@drawable/buttonshape"
        android:text="@string/new_appointment" />

    <Button
        android:id="@+id/m_b_my_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_b_register"
        android:layout_marginTop="333dp"
        android:background="@drawable/buttonshape"
        android:text="@string/my_appointment" />

    <Button
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/m_b_new_appointment"
        android:layout_marginTop="-104dp"
        android:background="@drawable/buttonshape"
        android:text="@string/question" />

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:layout_marginTop="138dp"
        android:background="@drawable/buttonshape"
        android:text="@string/profile" />

    <Button
        android:id="@+id/m_b_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="284dp"
        android:background="@drawable/buttonshape"
        android:text="@string/translate" />

</RelativeLayout>