<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login"
    android:id="@+id/l">

    <TextView
        android:id="@+id/l_t_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/l_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/l_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/l_cb_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/remember_me"
        android:textSize="17sp" />

    <Button
        android:id="@+id/l_b_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/l_t_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="17sp" />

    <Button
        android:id="@+id/l_b_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/register"
        android:textSize="17sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <Button
        android:id="@+id/l_b_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/back"
        android:textSize="17sp"/>
    </RelativeLayout>
</LinearLayout>