<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_Pet">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
    <TextView
        android:id="@+id/ap_tv_add_pet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/add_pet"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ap_tv_pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="50"
        android:gravity="center"
        android:hint="@string/pet_name"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ap_tv_pet_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="50"
        android:gravity="center"
        android:hint="@string/pet_age"
        android:inputType="number"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/ap_rg_pet_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/ap_rb_dog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dog"
            android:textSize="18sp"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/ap_rb_cat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:text="@string/cat"
            android:textSize="18sp" />
    </RadioGroup>

            <Button
                android:id="@+id/ap_b_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/add"
                android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/ap_b_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/back"
            android:textSize="17sp"/>
    </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>